[package]
name = "gomoku-gui"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-desktop = "0.5"
tokio = "1.37.0"
gomoku_lib = { git = "https://github.com/Maneren/gomoku-rust", tag = "v7.0.2", features = [
  "jemallocator",
] }
